# aiagent

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  configuration.md  providers.md  testing.md  tools.md
src/code_agent/: __init__.py  agent.py  approval.py  cli.py  config.py  context.py  execution.py  git_workflow.py  messages.py  observability.py  planner.py  rag.py  session.py  test_runner.py  tool_providers.py  ui.py
src/code_agent/providers/: __init__.py  base.py  gemini.py  ollama.py  openai_provider.py  registry.py
src/code_agent/tools/: __init__.py  base.py  filesystem.py  shell.py
tests/: test_agent_runtime.py  test_approval.py  test_composer.py  test_context.py  test_execution.py  test_gemini_live.py  test_git_workflow.py  test_planner.py  test_rag.py  test_runtime_tui.py  test_session_memory.py  test_test_runner.py  test_tool_providers.py  test_tools.py  test_ui.py
